# Ext

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  check_db.py  check_status.py  config.yaml  count.py  install.sh  pyproject.toml  start.sh  video_script.md
.trae/documents/: code_review_plan.md  code_review_report.md
docs/superpowers/plans/: 2026-04-15-video-subtitle-system.md  2026-04-16-project-standardization.md
docs/superpowers/specs/: 2026-04-15-video-subtitle-extraction-design.md  2026-04-16-project-standardization-design.md
ext/: __init__.py  config.py  crawler_db.py  scheduler.py  storage.py  worker.py
ext/asr/: audio_extractor.py  base.py  faster_whisper.py
ext/fingerprint/: phash.py
migrations/: 001_init_tables.sql
scripts/: init_db.py  init_tables.py
src/: config.py  main.py  worker.py
src/asr/: whisper.py
src/db/: crawler.py  pool.py  storage.py
src/fingerprint/: phash.py
tests/: conftest.py  test_asr.py  test_phash.py  test_storage.py  test_worker.py
video_subtitle_system/: Dockerfile  README.md  config.example.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
video_subtitle_system/sql/: init.sql  source_tables.sql
video_subtitle_system/src/: asr_engine.py  audio_extractor.py  config.py  cursor.py  db.py  downloader.py  fingerprint.py  logger.py  producer.py  redis_client.py  storage.py  worker.py
video_subtitle_system/tests/: test_integration.py
