[project]
name = "ext"
version = "0.1.0"
description = "抖音字幕提取 + 视频指纹去重"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.0",
    "ffmpeg-python>=0.2.0",
    "imagehash>=4.3.1",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "aiofiles>=23.2.0",
    "httpx>=0.27.0",
    "faster-whisper>=1.0.0",
    "opencv-python>=4.8.0",
    "schedule>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"